--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ categories = ["command-line-utilities", "filesystem"]
 
 [dependencies]
 tree_magic = "0.2"
-flate2 = "1.0"
+flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
 structopt = "0.3"
 stybulate = "1"
