--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tree_magic = "0.2"
 flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
 structopt = "0.3"
 stybulate = "1"
+bzip2 = "0.4"
