--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ categories = ["command-line-utilities", "filesystem"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tree_magic = "0.2"
+tree_magic_mini = "3"
 flate2 = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
 structopt = "0.3"
 stybulate = "1"
